[project]
name = "mcp-server-tempest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.1.0",
    "fastmcp>=2.9.2",
    "pydantic>=2.11.7",
    "weatherflow4py>=1.4.1",
]

[project.scripts]
mcp-server-tempest = "mcp_server_tempest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
