[project]
name = "mcp-server-tempest"
version = "0.4.0"
description = "MCP Server for Retrieving Tempest Weather Data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.1.0",
    "fastmcp>=3.1",
    "platformdirs>=4.0",
    "pydantic>=2.11.7",
    "weatherflow4py>=1.4.1",
]

[project.scripts]
mcp-server-tempest = "mcp_server_tempest:main"

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1.0",
    "ruff>=0.11",
    "ty>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
